test/sema/interface-wrong-type-as-this-type.delta
// RUN: %check_errors %not %delta -typecheck %s

interface Interface {
    S* f();

    This* bar() {
        // CHECK: [[@LINE+1]]:9: error: mismatching return type 'S*', expected 'Interface*'
        return f();
    }
}

struct S: Interface {
    S* f() { return this; }
}

void f(S* s) {
    s.bar();
}
